// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` undefined|null|void type 1`] = `
"/** @returns {undefined} */
"
`;

exports[` undefined|null|void type 2`] = `
"/** @returns {null} */
"
`;

exports[` undefined|null|void type 3`] = `
"/** @returns {void} */
"
`;

exports[`Bad defined name 1`] = `
"/** @type {import(\\"@jest/types/build/Config\\").InitialOptions} */
/** @type {{ foo: string }} */

/** @typedef {import(\\"@jest/types/build/Config\\").InitialOptions} name A description */
"
`;

exports[`Big single word 1`] = `
"/**
 * Simple Single Word
 * https://github.com/babel/babel/pull/7934/files#diff-a739835084910b0ee3ea649df5a4d223R67
 */
"
`;

exports[`Empty comment 1`] = `
"// Line Comment
//
"
`;

exports[`Format rest parameters properly 1`] = `
"/**
 * @param {...any} arg1
 * @param {...number} arg2
 * @param {...(string | number)} arg3
 * @param {...(string | number)} arg4 This is equivalent to arg3
 */
function a() {}
"
`;

exports[`Hyphen at the start of description 1`] = `
"/**
 * Assign the project to an employee.
 *
 * @param {Object} employee - The employee who is responsible for the project.
 * @param {string} employee.name - The name of the employee.
 * @param {string} employee.department - The employee's department.
 */
"
`;

exports[`Incorrect comment 1`] = `
"/** Some comment */
export class Dummy {}
"
`;

exports[`Incorrect comment 2`] = `
"export class Dummy {}
"
`;

exports[`JS code should be formatted as usuall 1`] = `
"const variable1 = 1; // No semicolon
const stringVar = \\"text\\"; // Wrong quotes
const indented = 2; // Wrong indentation

// Longer then 80 characters
const someLongList = [
  \\"private\\",
  \\"memberof\\",
  \\"description\\",
  \\"example\\",
  \\"param\\",
  \\"returns\\",
  \\"link\\",
];
"
`;

exports[`Long description memory leak 1`] = `
"/**
 * Configures custom logging for the {@link @microsoft/signalr.HubConnection}.
 *
 * https://example.com
 *
 * @param {LogLevel | string | ILogger} logging A {@link
 *   @microsoft/signalr.LogLevel}, a string representing a LogLevel, or an
 *   object implementing the {@link @microsoft/signalr.ILogger} interface.
 *   See {@link
 *   https://docs.microsoft.com/aspnet/core/signalr/configuration#configure-logging|the
 *   documentation for client logging configuration} for more details.
 * @returns The {@link @microsoft/signalr.HubConnectionBuilder} instance, for chaining.
 */
"
`;

exports[`Non-jsdoc comment 1`] = `
"// @type   { something  }
/* @type   { something  }  */
/* /** @type   { something  }  */
"
`;

exports[`Optional parameters 1`] = `
"/**
 * @param {number} [arg1]
 * @param {number} [arg2]
 * @param {number} [arg3=4] Default is \`4\`
 */
"
`;

exports[`Should align vertically param|property|returns|yields|throws if option set to true, and amount of spaces is different than default 1`] = `
"/**
 * @property  {Object}          unalginedProp   Unaligned property descriptin
 * @param     {String}          unalginedParam  Unaligned param description
 * @throws    {CustomExceptio}                  Unaligned throws description
 * @yields    {Number}                          Yields description
 * @returns   {undefined}
 */
"
`;

exports[`Should align vertically param|property|returns|yields|throws if option set to true, and amount of spaces is different than default 2`] = `
"/**
 * @property    {Object}            unalginedProp     Unaligned property descriptin
 * @param       {String}            unalginedParam    Unaligned param description
 * @throws      {CustomExceptio}                      Unaligned throws description
 * @yields      {Number}                              Yields description
 * @returns     {String}                              Unaligned returns description
 */
"
`;

exports[`Should convert to single line if necessary 1`] = `
"/** Single line description */
"
`;

exports[`Should convert to single line if necessary 2`] = `
"/** Single line description */
"
`;

exports[`Should convert to single line if necessary 3`] = `
"/**
 * Single line description
 *
 * @returns {Boolean} Always true
 */
"
`;

exports[`Should format jsDoc default values 1`] = `
"/**
 * @param {String} [arg1=\\"defaultTest\\"] Foo. Default is \`\\"defaultTest\\"\`
 * @param {number} [arg2=123] The width of the rectangle. Default is \`123\`
 * @param {number} [arg3=123] Default is \`123\`
 * @param {number} [arg4=Foo.bar.baz] Default is \`Foo.bar.baz\`
 * @param {number | string} [arg5=123] Something. Default is \`123\`
 */
"
`;

exports[`Should format jsDoc default values 2`] = `
"/**
 * @param {String} [arg1=\\"defaultTest\\"] Foo. Default is \`\\"defaultTest\\"\`
 * @param {number} [arg2=123] The width of the rectangle. Default is \`123\`
 * @param {number} [arg3=123] Default is \`123\`
 * @param {number} [arg4=Foo.bar.baz] Default is \`Foo.bar.baz\`
 * @param {number | string} [arg5=123] Something. Default is \`123\`
 */
"
`;

exports[`Should format regular jsDoc 1`] = `
"/**
 * Function example description that was wrapped by hand so it have more then
 * one line and don't end with a dot REPEATED TWO TIMES BECAUSE IT WAS EASIER
 * to copy function example description that was wrapped by hand so it have
 * more then one line.
 *
 * @async
 * @private
 * @memberof test
 * @example
 *   var one = 5;
 *   var two = 10;
 *
 *   if (one > 2) {
 *     two += one;
 *   }
 *
 * @param {String | Number} text - Some text description that is very long and
 *   needs to be wrapped
 * @param {String} [defaultValue=\\"defaultTest\\"] TODO. Default is \`\\"defaultTest\\"\`
 * @param {Number | Null} [optionalNumber]
 * @undefiendTag
 * @undefiendTag {number} name des
 * @returns {Boolean} Description for @returns with s
 */
const testFunction = (text, defaultValue, optionalNumber) => true;
"
`;

exports[`Should format regular jsDoc 2`] = `
"/**
 * Function example description that was wrapped by hand so it have more then
 * one line and don't end with a dot REPEATED TWO TIMES BECAUSE IT WAS EASIER
 * to copy function example description that was wrapped by hand so it have
 * more then one line.
 *
 * @async
 * @private
 * @memberof test
 * @example
 *   var one = 5;
 *   var two = 10;
 *
 *   if (one > 2) {
 *     two += one;
 *   }
 *
 * @param {String | Number} text - Some text description that is very long and
 *   needs to be wrapped
 * @param {String} [defaultValue=\\"defaultTest\\"] TODO. Default is \`\\"defaultTest\\"\`
 * @param {Number | Null} [optionalNumber]
 * @undefiendTag
 * @undefiendTag {number} name des
 * @returns {Boolean} Description for @returns with s
 */
const testFunction = (text, defaultValue, optionalNumber) => true;
"
`;

exports[`Should insert proper amount of spaces based on option 1`] = `
"/**
 * @param  {Object}  paramName  Param description that goes on and on and on
 *   utill it will need to be wrapped
 * @returns  {Number}  Return description
 */
"
`;

exports[`Should insert proper amount of spaces based on option 2`] = `
"/**
 * @param   {Object}   paramName   Param description that goes on and on and on
 *   utill it will need to be wrapped
 * @returns   {Number}   Return description
 */
"
`;

exports[`Should keep defined inner types 1`] = `
"/** @param {String[]} test Test param */
"
`;

exports[`Should keep defined inner types 2`] = `
"/** @param {String[]} test Test param */
"
`;

exports[`Should keep defined inner types 3`] = `
"/** @param {(String | Object)[]} test Test param */
"
`;

exports[`Should keep defined inner types 4`] = `
"/** @returns {Promise<Number | String | undefined>} Test promise */
"
`;

exports[`Should keep defined inner types 5`] = `
"/** @returns {Object<Number | String | undefined>} Test object */
"
`;

exports[`Sould keep complex inner types 1`] = `
"/**
 * @param {(String | Number)[]} test Test param
 * @param {Object<String, Number>[]} test Test param
 * @param {...Number} test Test param
 * @param {Number | null} test Test param
 * @param {undefined | null} test Test param
 * @param {!Number} test Test param
 * @param {Number} test Test param
 * @param {Number | String} test Test param
 * @param {undefined} test Test param
 * @param {any} test Test param
 * @todo Todo is no param
 */
"
`;

exports[`Sould keep complex inner types 2`] = `
"/** @returns {Promise<Object<string, number | undefined>>} Test return */
"
`;

exports[`Sould keep params ordering when more than 10 tags are present 1`] = `
"/**
 * Description
 *
 * @param {Number} test1 Test param
 * @param {Number} test2 Test param
 * @param {Number | String} test3 Test param
 * @param {undefined | null} test4 Test param
 * @param {!undefined} test5 Test param
 * @param {any} test6 Test param
 * @param {\\"*\\"} test6 Test param
 * @param {Number | null} test7 Test param
 * @param {...Number} test8 Test param
 * @param {!Number} test9 Test param
 * @param {String} test10 Test param
 * @param {Array} test11 Test param
 * @returns {Promise<Object<string, number | undefined>>} Test return
 */
"
`;

exports[`since  1`] = `
"/** @since 3.16.0 */
"
`;

exports[`yields should work like returns tag 1`] = `
"/** @yields   {Number}   Yields description */
"
`;

exports[`yields should work like returns tag 2`] = `
"/** @yields   {Number}   Yields description */
"
`;

exports[`yields should work like returns tag 3`] = `
"/** @yields   {Number} */
"
`;

exports[`yields should work like returns tag 4`] = `
"/** @yields   Yelds description */
"
`;

exports[`yields should work like returns tag 5`] = `
"/** @yields */
"
`;
